<resources>
    <string name="app_name">ColorPicker</string>
    <string name="listening_for_changes">I\'m listening for color changes!</string>
    <string name="compact_color_picker">Compact Color Picker</string>
    <string name="square_color_picker">Square Color Picker</string>
    <string name="radial_color_picker">Radial Color Picker</string>
    <string name="button_instructions">Select a view to see it in action…</string>
    <string name="square_color_picker_dialogue">Square Color Picker in a dialogue</string>
    <string name="round_color_picker_dialogue">Radial Color Picker in a dialogue</string>
</resources>