<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="6dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.gerardbradshaw.exampleapp.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_and_padding_default"
        android:text="@string/button_instructions"/>

    <Button
        android:id="@+id/compact_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/compact_color_picker" />

    <Button
        android:id="@+id/square_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/square_color_picker" />

    <Button
        android:id="@+id/round_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_and_padding_default"
        android:onClick="buttonClicked"
        android:text="@string/radial_color_picker" />

    <Button
        android:id="@+id/square_dialog_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_and_padding_default"
        android:onClick="buttonClicked"
        android:text="@string/square_color_picker_dialogue" />

    <Button
        android:id="@+id/round_dialog_example_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="buttonClicked"
        android:text="@string/round_color_picker_dialogue" />
</LinearLayout>